fix decrypt token and roles, bug with login and injection